css/styles.css
@import url("reset.css");

/* || Global styles */
:root {
  --color-white: hsl(0, 0%, 100%);
  --color-violet: hsl(257, 40%, 49%);
  --color-soft-magenta: hsl(301, 70%, 71%);
  --color-bright-magenta: hsl(322, 100%, 66%);
  --heading-font: "Poppins", sans-serif;
  --body-font: "Open Sans", sans-serif;
}

body {
  background-color: var(--color-violet);
  background-image: url("../images/bg-mobile.svg");
  background-repeat: no-repeat;
  background-size: contain;
  color: var(--color-white);
  font-family: var(--body-font);
}

a:focus-visible {
  outline: 0.2rem dotted var(--color-bright-magenta);
  outline-offset: 0.2rem;
}

/* || Page header and logo styles */
.header {
  padding: 2.3875rem 2.5rem;
}

.header__logo {
  width: 7.5rem;
  height: 1.1875rem;
  object-fit: cover;
}

/* || Main section styles  */
.main-section {
  text-align: center;
  padding: 0 2.25rem;
  display: flex;
  flex-direction: column;
  gap: 3.75rem;
  margin-bottom: 1.5rem;
}

.main-section__image {
  margin: 0 0.25rem; /* Align the image with the header logo */
}

.main-section__info {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.main-section__title {
  font-family: var(--heading-font);
  font-size: 1.5rem;
  font-weight: 600;
}

.main-section__text {
  margin-bottom: 0.5rem;
}

.main-section__cta {
  background-color: var(--color-white);
  color: var(--color-violet);
  box-shadow: 0.0625rem 0.1875rem 0.3125rem hsla(0, 0%, 0%, 0.27);
  text-decoration: none;
  border-radius: 1.25rem;
  font-size: 0.75rem;
  padding: 0.6875rem 4.71875rem;
  align-self: center;
  transition: all 0.3s ease-out 0s;
}

.main-section__cta:hover,
.main-section__cta:focus-visible {
  background-color: var(--color-soft-magenta);
  color: var(--color-white);
  box-shadow: 0.125rem 0.25rem 0.5625rem 0.1875rem hsla(0, 0%, 0%, 0.26);
}

/* || Page footer and social links styles */
.footer {
  padding: 2.5rem;
  display: flex;
  justify-content: center;
}

.footer__social-links {
  display: flex;
  gap: 0.65625rem;
}

.footer__social-link {
  display: inline-block;
  border: 0.8px solid var(--color-white);
  border-radius: 50%;
  transition: all 0.15s ease-in-out 0s;
}

.footer__social-icon {
  width: 1.65625rem;
  height: 1.6875rem;
  fill: var(--color-white);
  vertical-align: middle;
  transform: scale(0.5);
}

.footer__social-link:hover,
.footer__social-link:focus-visible {
  border-color: var(--color-bright-magenta);
  transform: scale(1.1);
}

.footer__social-link:hover .footer__social-icon,
.footer__social-link:focus-visible .footer__social-icon {
  fill: var(--color-bright-magenta);
}

/* || Media queries */
@media (min-width: 31.25rem) {
  .main-section__image {
    max-width: 80%;
    margin: 0 auto;
  }
}

@media (min-width: 60.25rem) {
  body {
    background-image: url("../images/bg-desktop.svg");
    background-size: cover;
  }
}

@media (min-width: 70rem) {
  body {
    font-size: 1.125rem;
  }

  .header {
    padding: 4rem 5rem;
  }

  .header__logo {
    width: 12.5rem;
    height: 2rem;
  }

  .main-section {
    text-align: left;
    padding: 0 5rem;
    flex-direction: row;
    gap: 3.6875rem;
    margin: 2.5rem 0 0;
  }

  .main-section__image {
    margin: 0;
  }

  .main-section__info {
    align-self: center;
    gap: 1.5rem;
  }

  .main-section__title {
    font-size: 2.5rem;
  }

  .main-section__cta {
    align-self: flex-start;
    font-size: inherit;
    border-radius: 1.75rem;
    padding: 0.90625rem 4rem;
  }

  .footer {
    justify-content: flex-end;
    padding: 1.6875rem 5rem 2.5rem;
  }

  .footer__social-links {
    gap: 1rem;
  }

  .footer__social-link {
    border-width: 1.18px;
  }

  .footer__social-icon {
    width: 2.375rem;
    height: 2.375rem;
  }
}

